--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,10 @@
 </head>
 
 <body>
-
+<canvas class="grad"></canvas>
+<!--<div class="flying-light">
+    <span></span>
+</div>-->
 <div class="main-wrapper">
     <header>
     <div class="container-main">
