--- a/public/index.html
+++ b/public/index.html
@@ -161,42 +161,24 @@
 </a>                    <p>Storytelling in business has<br>become a field in its own right<br>as industries have grown</p>
                 </div>
                 <div class="hero__cards">
+                    <svg class="clip-svg" aria-hidden="true">
+                        <clipPath id="notepad-card-clippath" clipPathUnits="objectBoundingBox"><path d="M0,0.045 C0,0.02,0.021,0,0.047,0 H0.953 C0.979,0,1,0.02,1,0.045 V0.134 H0.965 C0.946,0.134,0.93,0.149,0.93,0.168 C0.93,0.186,0.946,0.201,0.965,0.201 H1 V0.268 H0.965 C0.946,0.268,0.93,0.283,0.93,0.302 C0.93,0.32,0.946,0.335,0.965,0.335 H1 V0.402 H0.965 C0.946,0.402,0.93,0.417,0.93,0.436 C0.93,0.454,0.946,0.469,0.965,0.469 H1 V0.536 H0.965 C0.946,0.536,0.93,0.551,0.93,0.57 C0.93,0.588,0.946,0.603,0.965,0.603 H1 V0.67 H0.965 C0.946,0.67,0.93,0.685,0.93,0.704 C0.93,0.722,0.946,0.737,0.965,0.737 H1 V0.804 H0.965 C0.946,0.804,0.93,0.819,0.93,0.838 C0.93,0.856,0.946,0.871,0.965,0.871 H1 V0.955 C1,0.98,0.979,1,0.953,1 H0.047 C0.021,1,0,0.98,0,0.955 V0.045"></path></clipPath>
+                    </svg>
                     <div class="notepad-card">
+    <div class="notepad-card__circles "></div>
     <img src="image/notepad-cards/notepad-img1.svg" alt="img" class="notepad-card__icon">
     <h5 class="notepad-card__title fz-28-20">1,023</h5>
     <p class="notepad-card__content">ASCANS<br>graduated</p>
-    <div class="notepad__rings">
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-            </div>
 </div>                    <div class="notepad-card">
+    <div class="notepad-card__circles "></div>
     <img src="image/notepad-cards/notepad-img2.svg" alt="img" class="notepad-card__icon">
     <h5 class="notepad-card__title fz-28-20">349</h5>
     <p class="notepad-card__content">Space explorers trained</p>
-    <div class="notepad__rings">
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-            </div>
 </div>                    <div class="notepad-card">
+    <div class="notepad-card__circles "></div>
     <img src="image/notepad-cards/notepad-img3.svg" alt="img" class="notepad-card__icon">
     <h5 class="notepad-card__title fz-28-20">0$</h5>
     <p class="notepad-card__content">Yes, our Training is completely free!</p>
-    <div class="notepad__rings">
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-                    <div class="ring"></div>
-            </div>
 </div>                </div>
             </div>
         </div>
@@ -313,22 +295,12 @@
 </span>            Training
         </h2>
         <div class="our-training">
-            <div class="notepad">
-    <div class="notepad-page tile-bg tile-bg--no-border notepad-left">
-        <div class="notepad__rings">
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                    </div>
+            <svg class="clip-svg" aria-hidden="true">
+    <clipPath id="notepad-clippath" clipPathUnits="objectBoundingBox"><path d="M0,0.024 C0,0.011,0.013,0,0.029,0 H0.971 C0.987,0,1,0.011,1,0.024 V0.976 C1,0.989,0.987,1,0.971,1 H0.029 C0.013,1,0,0.989,0,0.976 V0.919 C0.001,0.919,0.002,0.919,0.003,0.919 H0.033 C0.044,0.919,0.054,0.911,0.054,0.901 C0.054,0.892,0.044,0.884,0.033,0.884 H0.003 C0.002,0.884,0.001,0.884,0,0.884 V0.846 C0.001,0.846,0.002,0.846,0.003,0.846 H0.033 C0.044,0.846,0.054,0.838,0.054,0.828 C0.054,0.819,0.044,0.811,0.033,0.811 H0.003 C0.002,0.811,0.001,0.811,0,0.811 V0.773 C0.001,0.773,0.002,0.773,0.003,0.773 H0.033 C0.044,0.773,0.054,0.765,0.054,0.756 C0.054,0.746,0.044,0.738,0.033,0.738 H0.003 C0.002,0.738,0.001,0.738,0,0.738 V0.7 C0.001,0.7,0.002,0.7,0.003,0.7 H0.033 C0.044,0.7,0.054,0.692,0.054,0.683 C0.054,0.673,0.044,0.665,0.033,0.665 H0.003 C0.002,0.665,0.001,0.665,0,0.665 V0.627 C0.001,0.627,0.002,0.627,0.003,0.627 H0.033 C0.044,0.627,0.054,0.619,0.054,0.61 C0.054,0.6,0.044,0.592,0.033,0.592 H0.003 C0.002,0.592,0.001,0.592,0,0.592 V0.554 C0.001,0.554,0.002,0.554,0.003,0.554 H0.033 C0.044,0.554,0.054,0.546,0.054,0.537 C0.054,0.527,0.044,0.519,0.033,0.519 H0.003 C0.002,0.519,0.001,0.519,0,0.52 V0.481 C0.001,0.481,0.002,0.481,0.003,0.481 H0.033 C0.044,0.481,0.054,0.473,0.054,0.464 C0.054,0.454,0.044,0.446,0.033,0.446 H0.003 C0.002,0.446,0.001,0.446,0,0.447 V0.408 C0.001,0.408,0.002,0.408,0.003,0.408 H0.033 C0.044,0.408,0.054,0.401,0.054,0.391 C0.054,0.381,0.044,0.374,0.033,0.374 H0.003 C0.002,0.374,0.001,0.374,0,0.374 V0.335 C0.001,0.335,0.002,0.335,0.003,0.335 H0.033 C0.044,0.335,0.054,0.328,0.054,0.318 C0.054,0.308,0.044,0.301,0.033,0.301 H0.003 C0.002,0.301,0.001,0.301,0,0.301 V0.262 C0.001,0.262,0.002,0.263,0.003,0.263 H0.033 C0.044,0.263,0.054,0.255,0.054,0.245 C0.054,0.235,0.044,0.228,0.033,0.228 H0.003 C0.002,0.228,0.001,0.228,0,0.228 V0.189 C0.001,0.19,0.002,0.19,0.003,0.19 H0.033 C0.044,0.19,0.054,0.182,0.054,0.172 C0.054,0.163,0.044,0.155,0.033,0.155 H0.003 C0.002,0.155,0.001,0.155,0,0.155 V0.116 C0.001,0.116,0.002,0.116,0.003,0.116 H0.033 C0.044,0.116,0.054,0.108,0.054,0.099 C0.054,0.089,0.044,0.081,0.033,0.081 H0.003 C0.002,0.081,0.001,0.081,0,0.081 V0.024"></path></clipPath>
+</svg>
+<div class="notepad">
+    <div class="notepad-page notepad-left">
+        <div class="notepad-circles tile-bg tile-bg--no-border"></div>
         <div class="notepad__page-name">Training Information</div>
                     <div data-module="0"
                  class="notepad__page-content active">
@@ -361,21 +333,8 @@
                 <div class="notepad__page-description">6The ASCAN Training is your safest, easiest and quickest way to get your first NFT. We will take you on an exciting journey and guide you briefly through every single step you need to know to get your first NFT at no risk. And the best thing is: you will not only learn, but actually take action by doing practical tasks. No more boring videos, articles and blogs. Getting your first NFT can be that easy, and it's completely free!</div>
             </div>
             </div>
-    <div class="notepad-page tile-bg tile-bg--no-border notepad-right">
-        <div class="notepad__rings notepad__rings--left">
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                            <div class="ring"></div>
-                    </div>
+    <div class="notepad-page notepad-right">
+        <div class="notepad-circles tile-bg tile-bg--no-border"></div>
         <div class="notepad__page-name">Module content</div>
                     <button class="notepad__button active" type="button"
                     aria-label="Select module" data-module="0">
