--- a/public/index.html
+++ b/public/index.html
@@ -127,9 +127,103 @@
                     <svg><use xlink:href="#lines"></use></svg>
                 </span>
             </a>
+            <button type="button" aria-label="Toggle mobile menu" class="burger">
+                <svg width="100" height="100" viewBox="0 0 100 100">
+    <path class="burger-line burger-line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
+    <path class="burger-line burger-line2" d="M 20,50 H 80" />
+    <path class="burger-line burger-line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+</svg>            </button>
         </div>
     </div>
-</header>
+    <div class="mobile-menu">
+    <div class="mobile-menu__inner">
+        <nav>
+    <ul>
+                    <li>
+                <a href="/about.html">
+                    Home                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+                    <li>
+                <a href="/about.html">
+                    About                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+                    <li>
+                <a href="/about.html">
+                    Training                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+                    <li>
+                <a href="/about.html">
+                    Academy                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+                    <li>
+                <a href="/about.html">
+                     FAQ                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+                    <li>
+                <a href="/about.html">
+                    Support or Contact                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+            </ul>
+</nav>        <div class="mobile-menu__actions">
+            <a href="<br />
+<b>Warning</b>:  Undefined variable $btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
+"
+   class="btn btn-primary">
+    <span class="value">Try for free</span>
+</a>        </div>
+        <div class="mobile-menu__socials">
+                <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
+        <img src="image/socials/twitter.svg" alt="Twitter">
+    </a>
+    <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
+        <img src="image/socials/fb.svg" alt="Facebook">
+    </a>
+    <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
+        <img src="image/socials/insta.svg" alt="Instagram">
+    </a>
+    <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
+        <img src="image/socials/tg.svg" alt="Telegram">
+    </a>
+        </div>
+    </div>
+</div>
+<div class="overlay"></div></header>
     <main>
         <section>
     <div class="container-main">
@@ -161,21 +255,18 @@
 </a>                    <p>Storytelling in business has<br>become a field in its own right<br>as industries have grown</p>
                 </div>
                 <div class="hero__cards">
-                    <svg class="clip-svg" aria-hidden="true">
-                        <clipPath id="notepad-card-clippath" clipPathUnits="objectBoundingBox"><path d="M0,0.045 C0,0.02,0.021,0,0.047,0 H0.953 C0.979,0,1,0.02,1,0.045 V0.134 H0.965 C0.946,0.134,0.93,0.149,0.93,0.168 C0.93,0.186,0.946,0.201,0.965,0.201 H1 V0.268 H0.965 C0.946,0.268,0.93,0.283,0.93,0.302 C0.93,0.32,0.946,0.335,0.965,0.335 H1 V0.402 H0.965 C0.946,0.402,0.93,0.417,0.93,0.436 C0.93,0.454,0.946,0.469,0.965,0.469 H1 V0.536 H0.965 C0.946,0.536,0.93,0.551,0.93,0.57 C0.93,0.588,0.946,0.603,0.965,0.603 H1 V0.67 H0.965 C0.946,0.67,0.93,0.685,0.93,0.704 C0.93,0.722,0.946,0.737,0.965,0.737 H1 V0.804 H0.965 C0.946,0.804,0.93,0.819,0.93,0.838 C0.93,0.856,0.946,0.871,0.965,0.871 H1 V0.955 C1,0.98,0.979,1,0.953,1 H0.047 C0.021,1,0,0.98,0,0.955 V0.045"></path></clipPath>
-                    </svg>
                     <div class="notepad-card">
-    <div class="notepad-card__circles "></div>
+    <div class="notepad-card__circles"></div>
     <img src="image/notepad-cards/notepad-img1.svg" alt="img" class="notepad-card__icon">
     <h5 class="notepad-card__title fz-28-20">1,023</h5>
     <p class="notepad-card__content">ASCANS<br>graduated</p>
 </div>                    <div class="notepad-card">
-    <div class="notepad-card__circles "></div>
+    <div class="notepad-card__circles"></div>
     <img src="image/notepad-cards/notepad-img2.svg" alt="img" class="notepad-card__icon">
     <h5 class="notepad-card__title fz-28-20">349</h5>
     <p class="notepad-card__content">Space explorers trained</p>
 </div>                    <div class="notepad-card">
-    <div class="notepad-card__circles "></div>
+    <div class="notepad-card__circles"></div>
     <img src="image/notepad-cards/notepad-img3.svg" alt="img" class="notepad-card__icon">
     <h5 class="notepad-card__title fz-28-20">0$</h5>
     <p class="notepad-card__content">Yes, our Training is completely free!</p>
@@ -628,7 +719,7 @@
             </a>
         </div>
         <div class="footer-subscribe">
-    <h3 class="footer-subscribe__title section-title section-title--left title-animation">
+    <h3 class="footer-subscribe__title section-title section-title--no-center section-title--left title-animation">
         <span class="attention attention--left">
     Subscribe    <span class="icon">
         <svg id="lines" viewBox="0 0 16 19">
@@ -678,19 +769,19 @@
             <div class="footer__socials">
                 <p>Follow our updates:</p>
                 <div class="footer__socials__listing">
-                                            <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
-                            <img src="image/socials/twitter.svg" alt="Twitter">
-                        </a>
-                                            <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
-                            <img src="image/socials/fb.svg" alt="Facebook">
-                        </a>
-                                            <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
-                            <img src="image/socials/insta.svg" alt="Instagram">
-                        </a>
-                                            <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
-                            <img src="image/socials/tg.svg" alt="Telegram">
-                        </a>
-                                    </div>
+                        <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
+        <img src="image/socials/twitter.svg" alt="Twitter">
+    </a>
+    <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
+        <img src="image/socials/fb.svg" alt="Facebook">
+    </a>
+    <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
+        <img src="image/socials/insta.svg" alt="Instagram">
+    </a>
+    <a href="https://google.com/" target="_blank" rel="nofollow" class="social-button">
+        <img src="image/socials/tg.svg" alt="Telegram">
+    </a>
+                </div>
             </div>
             <nav class="footer__tech-links">
                 <ul>
