--- a/public/index.html
+++ b/public/index.html
@@ -278,8 +278,9 @@
     <div class="container-main">
         <div class="what-is-ascan">
             <h2 class="section-title title-animation">What is the ASCAN Training?</h2>
-            <div class="what-is-ascan__listing">
-                <div class="what-is-card">
+            <div class="scroll-snap">
+                <div class="what-is-ascan__listing scroll-snap__elements">
+                    <div class="what-is-card">
     <div class="what-is-card__image">
         <img src="image/what-is/what-is1.svg" alt="Get into NFT’s Easy">
     </div>
@@ -297,13 +298,21 @@
     </div>
     <h4 class="what-is-card__title">NFT as Reward</h4>
     <p class="what-is-card__content">You will receive a beautiful and free NFT as a reward to always have a great memory of your first minting experience</p>
-</div>            </div>
+</div>                </div>
+                <div class="scroll-snap__indicators">
+                                            <button type="button" aria-label="Select 1 slide"
+                                class="scroll-snap__indicator active"></button>
+                                            <button type="button" aria-label="Select 2 slide"
+                                class="scroll-snap__indicator "></button>
+                                            <button type="button" aria-label="Select 3 slide"
+                                class="scroll-snap__indicator "></button>
+                                    </div>
+            </div>
         </div>
     </div>
 </section>        <section>
     <div class="container-main">
         <div class="why-get-block">
-            <div class="why-get-block__decor"></div>
             <div class="why-get-block__main">
                 <h2 class="section-title section-title--left title-animation">
                     Why you
@@ -340,6 +349,7 @@
                     </ol>
                 </div>
             </div>
+            <div class="why-get-block__decor"></div>
         </div>
     </div>
 </section>        <section>
@@ -391,7 +401,7 @@
 </svg>
 <div class="notepad">
     <div class="notepad-page notepad-left">
-        <div class="notepad-circles tile-bg tile-bg--no-border"></div>
+        <div class="notepad-circles"></div>
         <div class="notepad__page-name">Training Information</div>
                     <div data-module="0"
                  class="notepad__page-content active">
@@ -425,7 +435,7 @@
             </div>
             </div>
     <div class="notepad-page notepad-right">
-        <div class="notepad-circles tile-bg tile-bg--no-border"></div>
+        <div class="notepad-circles"></div>
         <div class="notepad__page-name">Module content</div>
                     <button class="notepad__button active" type="button"
                     aria-label="Select module" data-module="0">
@@ -551,23 +561,33 @@
                 comes with plenty of utility
                 which will help you navigate and ensure a safe start into your NFT journey.</p>
         </div>
-        <div class="safe-start__listing ordered-list">
-            <div class="numbered-card tile-bg">
+        <div class="scroll-snap">
+            <div class="safe-start__listing ordered-list scroll-snap__elements">
+                <div class="numbered-card tile-bg">
     <h4 class="numbered-card__title fz-28-24">ASCAN Academy</h4>
     <p class="numbered-card__content">Free access to the ASCAN Academy</p>
     <a href="https://google.com/https://google.com/"
    class="btn btn-secondary">
     <span class="value">About Academy</span>
-</a></div>            <div class="numbered-card tile-bg">
+</a></div><div class="numbered-card tile-bg">
     <h4 class="numbered-card__title fz-28-24">Discord Community </h4>
     <p class="numbered-card__content">Free access to our Discord Community Server</p>
     <a href="https://google.com/https://google.com/"
    class="btn btn-secondary">
     <span class="value">Our Discord</span>
-</a></div>            <div class="numbered-card tile-bg">
+</a></div><div class="numbered-card tile-bg">
     <h4 class="numbered-card__title fz-28-24">Eligible for free Airdrops</h4>
     <p class="numbered-card__content">Chance for more free NFTs with more access</p>
-    </div>        </div>
+    </div>            </div>
+            <div class="scroll-snap__indicators">
+                                    <button type="button" aria-label="Select 1 slide"
+                            class="scroll-snap__indicator active"></button>
+                                    <button type="button" aria-label="Select 2 slide"
+                            class="scroll-snap__indicator "></button>
+                                    <button type="button" aria-label="Select 3 slide"
+                            class="scroll-snap__indicator "></button>
+                            </div>
+        </div>
     </div>
 </section>        <section>
     <div class="container-main">
@@ -616,7 +636,7 @@
 </section>        <section>
     <div class="container-main">
         <div class="decorated-cta tile-bg">
-            <h2 class="section-title">
+            <h2 class="section-title title-animation">
                 <span class="attention attention--left">
     Ready    <span class="icon">
         <svg id="lines" viewBox="0 0 16 19">
@@ -633,9 +653,7 @@
 </svg>    </span>
 </span>                space? Start your journey now!
             </h2>
-            <a href="<br />
-<b>Warning</b>:  Undefined variable $btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
-"
+            <a href=""
    class="btn btn-primary">
     <span class="value">Launch the ASCAN Training</span>
 </a>        </div>
@@ -765,7 +783,72 @@
             </form>
         </div>
     </div>
-</div>        <div class="footer__bottom">
+</div>        <div class="footer__navigation">
+            <nav>
+    <ul>
+                    <li>
+                <a href="/about.html">
+                    Home                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+                    <li>
+                <a href="/about.html">
+                    About                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+                    <li>
+                <a href="/about.html">
+                    Training                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+                    <li>
+                <a href="/about.html">
+                    Academy                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+                    <li>
+                <a href="/about.html">
+                     FAQ                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+                    <li>
+                <a href="/about.html">
+                    Support or Contact                    <span class="icon">
+                        <svg viewBox="0 0 60 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.00018 17.1023C14.8805 11.6026 37.0769 10.7118 42.1028 10.7545C46.068 10.7532 54.1226 12.331 57.9248 11.9367C58.6955 11.8568 56.405 11.6263 55.6364 11.529C53.5264 11.2619 51.413 11.0232 49.3033 10.7522C36.8149 9.14757 24.389 7.5218 11.8121 6.80047C10.073 6.70073 8.33827 6.75393 6.60088 6.68196C5.46593 6.63495 4.34155 6.46322 3.2056 6.41617C3.03424 6.40907 1.52532 6.39661 2.37671 6.15934C3.82742 5.75505 5.43845 5.68829 6.92224 5.5689C9.63317 5.35076 48.1689 2.92273 52.5 1.10213"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+</svg>
+                    </span>
+                </a>
+            </li>
+            </ul>
+</nav>        </div>
+        <div class="footer__bottom">
             <div class="footer__socials">
                 <p>Follow our updates:</p>
                 <div class="footer__socials__listing">
