--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
     <span></span>
 </div>-->
 <div class="main-wrapper">
-    <header>
+    <header class="header--on-top">
     <div class="container-main">
         <div class="header-inner">
             <a href="/" class="header__logo">
