--- a/public/about.html
+++ b/public/about.html
@@ -49,7 +49,7 @@
 <body>
 <canvas class="grad"></canvas>
 <div class="main-wrapper">
-    <header>
+    <header class="header--on-top">
     <div class="container-main">
         <div class="header-inner">
             <a href="/" class="header__logo">
