--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     <header class="header--on-top">
     <div class="container-main">
         <div class="header-inner">
-            <a href="/" class="header__logo">
+            <a href="/" class="header__logo default-outline">
                 <img src="/image/logo.svg" alt="Logo">
             </a>
             <nav>
@@ -663,7 +663,7 @@
     <footer>
     <div class="container-main">
         <div class="footer__menu">
-            <a href="/" class="header__logo">
+            <a href="/" class="header__logo default-outline">
                 <img src="/image/logo.svg" alt="Logo">
             </a>
             <nav>
@@ -774,8 +774,8 @@
                 Sign up to our newsletter and receive our new research, portfolio news and content direct to your inbox.
             </p>
             <form action="#" class="subscribe-form">
-                <label class="default-input">
-                    <input type="email" required placeholder="Enter your email">
+                <input hidden type="text" name="tag" value="newsletter">                <label class="default-input">
+                    <input type="email" name="email" required placeholder="Enter your email">
                 </label>
                 <button type="submit" class="btn btn-primary btn-primary--simple">
                     <span class="value">Send</span>
