--- a/public/mint.html
+++ b/public/mint.html
@@ -53,7 +53,8 @@
     <div class="container-main">
         <div class="header-inner">
             <a href="/" class="header__logo default-outline">
-                <img src="/image/ascan-training-logo.svg" alt="Logo">
+                <img src="/image/ascan-training-logo.svg" alt="Logo" class="desktop-logo">
+                <img src="/image/logo.svg" alt="Logo" class="mobile-logo">
             </a>
             <div class="header__cta">
                 <a href="/" target="_blank"
@@ -65,7 +66,7 @@
     <main>
         <section>
     <div class="container-main">
-        <div class="notepad">
+        <div class="notepad notepad--mint">
             <div class="notepad-page notepad-left">
                 <div class="notepad-circles"></div>
                 <div class="generate-nft-heading">
