--- a/public/about.html
+++ b/public/about.html
@@ -235,7 +235,9 @@
     </span>
 </span>                    is to make Web3/NFT accessible
                     to everyone
-                    <span class="img-in-text"><img src="image/simple-cta/simple-cta3.svg" alt="than just"></span>
+                    <span class="parallax-scene bubble-w-image bubble-w-image--green bubble-w-image--200">
+                    <img data-depth="1.5" src="image/simple-cta/simple-cta4.svg" alt="much more">
+                </span>
                 </h1>
                 <div class="hero__actions hero__actions--column">
                     <p>We are Web3/NFT enthusiasts with the strong belief that NFTs will immensely re-shape the world as we know it, and change the way people interact with - and operate in - the internet</p>
@@ -311,30 +313,31 @@
     </div>
 </div></div>        </div>
     </div>
-</section>        <section>
+</section>        
+<section>
     <div class="container-main">
         <div class="what-is-ascan">
             <h2 class="section-title title-animation">What is the ASCAN Training?</h2>
             <div class="scroll-snap">
                 <div class="what-is-ascan__listing scroll-snap__elements">
                     <div class="what-is-card">
-    <div class="what-is-card__image">
-        <img src="image/what-is/what-is1.svg" alt="Get into NFT’s Easy">
+    <div class="what-is-card__image" data-lottie-alternate="false"  data-lottie-name="pointer">
+        <!--<img src="" alt="">-->
     </div>
-    <h4 class="what-is-card__title">Get into NFT’s Easy</h4>
-    <p class="what-is-card__content">No more endless videos, blogs and scrolling through information on loaded and complicated websites</p>
+    <h4 class="what-is-card__title">Free Education</h4>
+    <p class="what-is-card__content">Our core principle is that knowledge and information should be free and accessible to everyone</p>
 </div><div class="what-is-card">
-    <div class="what-is-card__image">
-        <img src="image/what-is/what-is2.svg" alt="Step by Step Guide">
+    <div class="what-is-card__image" data-lottie-alternate="false"  data-lottie-name="hands">
+        <!--<img src="" alt="">-->
     </div>
-    <h4 class="what-is-card__title">Step by Step Guide</h4>
-    <p class="what-is-card__content">Our training is designed to guide you safely through every step to be prepared for getting your first NFT</p>
+    <h4 class="what-is-card__title">Inclusivity</h4>
+    <p class="what-is-card__content">We want to give everyone interested a fair opportunity to take part in Web3 and NFTs</p>
 </div><div class="what-is-card">
-    <div class="what-is-card__image">
-        <img src="image/what-is/what-is3.svg" alt="NFT as Reward">
+    <div class="what-is-card__image" data-lottie-alternate="false"  data-lottie-name="faces">
+        <!--<img src="" alt="">-->
     </div>
-    <h4 class="what-is-card__title">NFT as Reward</h4>
-    <p class="what-is-card__content">You will receive a beautiful and free NFT as a reward to always have a great memory of your first minting experience</p>
+    <h4 class="what-is-card__title">Community</h4>
+    <p class="what-is-card__content">Only together and through the exchange of experiences and information, we can grow</p>
 </div>                </div>
                 <div class="scroll-snap__indicators">
                                             <button type="button" aria-label="Select 1 slide"
@@ -744,6 +747,9 @@
             </nav>
         </div>
     </div>
+    <div class="footer-lottie">
+
+    </div>
 </footer>
 </div>
 
@@ -767,6 +773,11 @@
               fill="currentColor" stroke="currentColor" stroke-width="0.2"/>
         <path d="M10 6.25C7.93229 6.25 6.25 7.93229 6.25 10C6.25 12.0677 7.93229 13.75 10 13.75C12.0677 13.75 13.75 12.0677 13.75 10C13.75 7.93229 12.0677 6.25 10 6.25ZM10 12.5C8.62145 12.5 7.50002 11.3785 7.50002 10C7.50002 8.62149 8.62149 7.50002 10 7.50002C11.3785 7.50002 12.5 8.62149 12.5 10C12.5 11.3785 11.3785 12.5 10 12.5Z"
               fill="currentColor" stroke="currentColor" stroke-width="0.2"/>
+    </symbol>
+
+    <symbol id="arrow" viewBox="0 0 28 16" fill="none">
+        <path d="M0.292891 7.29289C-0.0976333 7.68342 -0.0976334 8.31658 0.29289 8.7071L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34314C8.46159 1.95262 8.46159 1.31945 8.07107 0.92893C7.68054 0.538406 7.04738 0.538406 6.65685 0.92893L0.292891 7.29289ZM28 7L0.999998 7L0.999998 9L28 9L28 7Z"
+              fill="currentColor"/>
     </symbol>
 
 
